--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsc && node dist/index.js",
-    "start-dev": "nodemon index.ts"
+    "start-dev": "nodemon index.ts",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
